--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -95,9 +95,9 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/astro-blog/blog/${post.id}/`}>
-									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
-									)}
+									// {post.data.heroImage && (
+									// 	<Image width={720} height={360} src={post.data.heroImage} alt="" />
+									// )}
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
