--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/astro-blog">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/astro-blog">Home</HeaderLink>
-			<HeaderLink href="/astro-blog/blog">Blog</HeaderLink>
+			<HeaderLink href="/astro-blog/blog">AI Accelerator blog</HeaderLink>
 			<HeaderLink href="/astro-blog/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
