--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,8 +18,9 @@ import Layout from '../layouts/BlogPost.astro';
 
 <h3>Civil service code</h3>
 
-<p>As a civil servant, I take my responsibilities to comply with the Civil Service Code
-	seriously.
+<p>As a civil servant, I take my responsibilities to comply with 
+	the <a href="https://www.gov.uk/government/publications/civil-service-code/the-civil-service-code">
+		Civil Service Code</a> seriously.
 	I endeavour not to express any opinions that would bring my integrity, honesty, objectivity and impartiality into doubt.
 	Please get in touch if you see anything here that you think isn't compatible with my public service role.</p>
 
@@ -27,8 +28,5 @@ import Layout from '../layouts/BlogPost.astro';
 <hr>
 <h3>Website details</h3>
 
-<p>Some of the blog posts on this site are republished from a previous Wordpress site.
-	Because the date of original publishing has been lost,
-	they are published under the date when they were transferred to the archive -- 3 September, 2021 -- 
-	which is not the date when they were published on this site.</p>
+<p>This website was built with <a href="https://astro.build">Astro</a>.</p>
 </Layout>
